bk_ida/gobmkida/c2/do_owl_attack
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_attack/src/engine/owl.c:1636:10: error: conflicting types for 'do_owl_attack'
__int64  do_owl_attack( 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_attack/src/engine/owl.c:135:12: note: previous declaration is here
static int do_owl_attack(int str, int *move, int *wormid,
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_attack/src/engine/owl.c:1762:10: error: use of undeclared identifier 'eyevalue'
v114 = ( eyevalue)-1; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_attack/src/engine/owl.c:1966:29: error: use of undeclared identifier 'unk_49B49A'
v117.name = ( const char *)&unk_49B49A; 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_attack/src/engine/owl.c:2113:17: error: use of undeclared identifier 'byte_9B389F'
for ( i = 22LL; byte_9B389F[i] != ( _BYTE)v103 || v61->goal[i - 1] != 1; i += 2LL ) 
                ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_attack/src/obj/1/owl.o] Error 1
